[package]
name = "ip_network_table"
version = "0.1.2"
authors = ["Jakub Onderka <ahoj@jakubonderka.cz>"]
license = "BSD-2-Clause"
keywords = ["ip", "ipv4", "ipv6", "network", "address"]
categories = ["network-programming", "data-structures"]
readme = "README.md"
repository = "https://github.com/JakubOnderka/ip_network_table"
homepage = "https://github.com/JakubOnderka/ip_network_table"
documentation = "https://docs.rs/ip_network_table"
description = """
IPv4 and IPv6 network fast lookup table.
"""
edition = "2018"

[badges]
travis-ci = { repository = "JakubOnderka/ip_network_table" }
maintenance = { status = "actively-developed" }

[dependencies]
ip_network = "0.3.0"
treebitmap = { path = "treebitmap" }

[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "benchmark"
harness = false
