[package]
name = "ipnet-trie"
version = "0.0.2"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>", "Jakub Onderka <ahoj@jakubonderka.cz>"]
license = "BSD-2-Clause"
keywords = ["ip", "network", "address", "bgp", "trie"]
categories = ["network-programming", "data-structures"]
readme = "README.md"
repository = "https://github.com/bgpkit/ipnet-trie"
homepage = "https://github.com/bgpkit/ipnet-trie"
documentation = "https://docs.rs/ipnet-trie"
description = """
IPv4 and IPv6 network fast lookup trie.
"""
edition = "2021"

[dependencies]
ipnet = "2.8"
ip_network_table-deps-treebitmap = "0.5"
bincode= { version = "2.0.0-rc", optional = true }

[features]
default = []
export = ["bincode"]

[dev-dependencies]
criterion = "0.5"
oneio = "0.15"
tempdir = "0.3"

[[bench]]
name = "benchmark"
harness = false
